<resources>
    <string name="app_name">Yonca</string>
    <string name="urlInstagram">www.instagram.com/p/</string>
    <string name="yorumlar">Yorumlar</string>
    <string name="yardim">Yardım</string>
    <string name="yorumlariGetir">Yorumları Getir</string>
    <string name="yorumlarGetiriliyor">Yorumlar Getiriliyor</string>
    <string name="yorumGetirmeHatasi">Yorumlar getirilirken hata oluştu. \nLütfen bağlantıyı kontrol edip tekrar deneyin.</string>
    <string name="uzunSurebilir">Bu işlem yorumlarınızın sayısına ve internet hızınıza bağlı olarak birkaç dakika sürebilir.</string>
    <string name="postAdresi">Instagramdaki gönderinizin adresini girin</string>
    <string name="cekilisiKaydet">Çekilişi video olarak kaydet</string>


    <string name="kurallar">Çekiliş Kurallarını Girin</string>
    <string name="cekilisKurallari">Çekiliş Kuralları</string>
    <string name="asilSayisi">Asil Sayısı</string>
    <string name="yedekSayisi">Yedek Sayısı</string>
    <string name="etiketSayisi">Yorumun İçindeki Etiket Sayısı</string>
    <string name="yorumdaKelime">Yorumun İçinde Geçecek Metin</string>
    <string name="cokluYorumaIzınVerme">Aynı Kişiden Çoklu Yoruma İzin Verme</string>
    <string name="begenenlerdenSec">Gönderiyi Beğenmeyenleri Gizle</string>
    <string name="cekilisYap">Çekiliş Yap</string>
    <string name="talihliler">Talihliler</string>
    <string name="asillar">Asiller</string>
    <string name="yedekler">Yedekler</string>
    <string name="Yardım">Yardım</string>
    <string name="asilTalihliler">Asil Talihliler</string>
    <string name="yedekTalihliler">Yedek Talihliler</string>
    <string name="yorumlari">Yorumları</string>
    <string name="tekrarEt">Çekilişi Tekrar Et</string>
    <string name="kaydiDurdur">Kaydı Durdur</string>
    <string name="videoPaylas">Videoyu Paylaş</string>
    <string name="uygula">Uygula</string>

    <string name="ekranKayitIzniVerilmedi">Ekran Kaydı İçin İzin Verilmedi.</string>
    <string name="bellegeUlasilamadi">Belleğe ulşırken hata oluştu.</string>
    <string name="klasorOlusturulamadi">Bellekte Yonca klasörü oluşturulamadı.</string>
    <string name="yorumCekildi">yorum çekildi.</string>
    <string name="asilTalihliSayisiError">Asıl talihli sayısını girmelisiniz.</string>
    <string name="talihliYorumdanBuyuk">Talihli sayınız yorumların sayısından büyük olamaz.</string>
    <string name="talihliKatilandanBuyuk">Talihli sayınız yorum yapan sayısından büyük olamaz.</string>
    <string name="tekKullaniciUyari">Kurallarınız gereği kullanıcının birden çok yorumu varsa bile sadece bir yorumu dikkate alınmıştır.</string>
    <string name="urlGirilmedi">Lütfen kampanyanızın bağlantısını girin.</string>



</resources>
